2006-09-11  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* authors/index.php:
	* news/index.php:
	* documentation/faq/index.php:
	regenerated for 2.5.18

	* definitions.inc:
	updated for 2.5.18

2006-07-19  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* donations.php:
	updated

	* authors/index.php:
	* news/index.php:
	* documentation/faq/index.php:
	regenerated for 2.5.17

	* definitions.inc:
	updated for 2.5.17

2006-07-13  Scott Smedley <ss@aa.gov.au>

	* documentation/faq/index.php:
	updated FAQ

2006-04-02  Mikhael Goikhman  <migo@homemail.com>

	* index.php:
	* contact/index.php:
	update url of mailing list archives

2006-01-20  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* index.php:
	updated NEWS

	* authors/index.php:
	* news/index.php:
	* documentation/faq/index.php:
	regenerated for 2.5.16

	* definitions.inc:
	updated for 2.5.16

2006-01-14  Viktor Griph  <griph@dd.chalmers.se>

	* documentation/manpages/manpages2php:
	changed to ignore autom4te.cache-files
	* documentation/manpages/unstable/*.php
	regenerated

	* news/index.php:
	regenerated

2006-01-14  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* index.php:
	updated NEWS

	* authors/index.php:
	* news/index.php:
	* documentation/faq/index.php:
	regenerated for 2.5.15

	* definitions.inc:
	updated for 2.5.15

2005-09-23  Viktor Griph  <griph@dd.calmers.se>

	* screenshots/vectorbuttons/decor_demo.fvwmrc:
	updated to close demo windows, and clean up fvwm after run
	removed hardcoded directory

	* screenshots/vectorbuttons/create_fvwm_script.awk:
	added USAGE comment

	* screenshots/vectorbuttons/vectorbutton*.gif:
	* screenshots/vectorbuttons/vectorbuttonlist.inc:
	regenerated

2005-08-28  Mikhael Goikhman  <migo@homemail.com>

	* documentation/manpages/manpages2php:
	* documentation/manpages/unstable/*.php:
	* documentation/perllib/perllib2php:
	* documentation/perllib/unstable/*.php:
	regenerate documentation pages for 2.5.14

2005-08-25  Viktor Griph  <griph@dd.calmers.se>
